--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -51,3 +51,7 @@ table th {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
+.custom-carousel {
+  background-color: #87ceeb; /* Sky Blue */
+}
